// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX btMRNz"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hJgacS"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX btMRNz"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL eLpBdF"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX btMRNz"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL grNfBa"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL eugCNc"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL hYLIeH"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL iCcyoE"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hJgacS"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL eLpBdF"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL grNfBa"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hJgacS"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL eLpBdF"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL grNfBa"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hJgacS"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL eLpBdF"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL grNfBa"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hJgacS"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-goMRkL eLpBdF"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL grNfBa"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fQRjhM"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="medium e.g. 1234"
      type="number"
    >
      <input
        className="sc-goMRkL hJgacS"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="large e.g. 1234"
      type="number"
    >
      <input
        className="sc-goMRkL eLpBdF"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="xlarge e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL UdMCL"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fKjLAb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL cQmVft"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL lmjzvK"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dtoFCR"
      placeholder="e.g. 1234"
      type="number"
    >
      <div
        className="sc-jNrqiC hjjcDo"
      >
        <input
          className="sc-goMRkL hfDPTR"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
